--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-weight: bold;
 }
 body {
-    background-color:#080808;
+    background-color:#161616;
     padding:0;
     margin:0;
 }
@@ -19,10 +19,15 @@ main{
     margin-left:auto;
     margin-right:auto;
     display:flex;
+    padding-bottom:20px;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
+}
+nav{
+    margin-top:10px;
+    margin-bottom:10px;
+    border-bottom: solid 1px white;
 }
 footer{
     display:flex;
@@ -47,10 +52,60 @@ p {
     font-size: 16px;
     font-style: italic;
 }
-
 hr{
     width:75%;
     border-width: 1px;
+}
+/* content pages */
+.stuff{
+    width:85%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: solid 1px white;
+}
+.year{
+    width:100%;
+    display:flex;
+    justify-content: center;
+    border-top: solid 1px white;
+    border-bottom: solid 1px white;
+}
+.thing{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    align-items: center;
+    text-align: center;
+    width:300px;
+    min-height:350px;
+    margin:5px;
+    border: solid 1px white;
+}
+.deets{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-bottom: solid 1px white;
+    width:300px;
+    min-height:300px;
+    font-size: 10px;
+}
+.deets>img{
+    aspect-ratio: 1 / 1;
+    max-height: 300px;
+    height:auto;
+    width: auto;
+    object-fit: contain;
+}
+.thing>p{
+    width:300px;
+    height:20px;
 }
 /* hyperlinks */
 a:link {
